RESOLVED FIXED304000
[GStreamer][WebRTC] webrtc/connection-state.html is flaky crash
https://bugs.webkit.org/show_bug.cgi?id=304000
Summary [GStreamer][WebRTC] webrtc/connection-state.html is flaky crash
Philippe Normand
Reported 2025-12-11 09:05:18 PST
Program terminated with signal SIGSEGV, Segmentation fault. #0 0x00007f8632c18b3a in IPC::Connection::sendMessageImpl(WTF::UniqueRef<IPC::Encoder>&&, WTF::OptionSet<IPC::SendOption, (WTF::ConcurrencyTag)0>, std::optional<WTF::Thread::QOS>) () from /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 [Current thread is 1 (Thread 0x7f86259af440 (LWP 676459))] Thread 1 (Thread 0x7f86259af440 (LWP 676459)): #0 0x00007f8632c18b3a in IPC::Connection::sendMessageImpl(WTF::UniqueRef<IPC::Encoder>&&, WTF::OptionSet<IPC::SendOption, (WTF::ConcurrencyTag)0>, std::optional<WTF::Thread::QOS>) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #1 0x00007f8632c08150 in WTF::Detail::CallableWrapper<WebKit::RiceBackend::notifyIncomingData(unsigned int, WebCore::RTCIceProtocol, WTF::String&&, WTF::String&&, WebCore::SharedMemoryHandle&&)::{lambda()#1}, void>::call() () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #2 0x00007f862f45d45a in WTF::Detail::CallableWrapper<WTF::callOnMainAndWait<(WTF::MainStyle)1>(WTF::Function<void ()>&&)::{lambda()#1}, void>::call() () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #3 0x00007f862f478575 in WTF::RunLoop::performWork() () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #4 0x00007f862f56369d in WTF::RunLoop::RunLoop()::{lambda(void*)#1}::_FUN(void*) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #5 0x00007f862f56712d in WTF::RunLoop::{lambda(_GSource*, int (*)(void*), void*)#1}::_FUN(_GSource*, int (*)(void*), void*) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #6 0x00007f862ce6349e in ??? () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #7 0x00007f862ce63710 in g_main_context_dispatch () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #8 0x00007f862f5654d7 in WTF::RunLoop::runGLibMainLoopIteration(WTF::RunLoop::MayBlock) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #9 0x00007f862f5658e2 in WTF::RunLoop::run() () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #10 0x00007f8632b7fbab in int WebKit::AuxiliaryProcessMain<WebKit::NetworkProcessMainSoup>(int, char**) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #11 0x00007f86308181ca in __libc_start_call_main (main=main@entry=0x555ac4a18800 <main>, argc=argc@entry=3, argv=argv@entry=0x7ffd509fb518) at ../sysdeps/nptl/libc_start_call_main.h:58 #12 0x00007f863081828b in __libc_start_main_impl (main=0x555ac4a18800 <main>, argc=3, argv=0x7ffd509fb518, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffd509fb508) at ../csu/libc-start.c:360 #13 0x0000555ac4a18735 in _start ()
Attachments
Philippe Normand
Comment 1 2025-12-11 09:05:37 PST
(gdb) bt #0 0x00007f0d17c775b2 in std::__atomic_base<bool>::load (this=0x21, __m=std::memory_order::seq_cst) at /usr/bin/../lib/gcc/x86_64-redhat-linux/15/../../../../include/c++/15/bits/atomic_base.h:501 #1 std::atomic<bool>::operator bool (this=0x21) at /usr/bin/../lib/gcc/x86_64-redhat-linux/15/../../../../include/c++/15/atomic:96 #2 0x00007f0d18bde319 in IPC::Connection::isValid (this=0x0) at ./Source/WebKit/Platform/IPC/Connection.h:515 #3 0x00007f0d19107051 in IPC::Connection::sendMessageImpl (this=0x0, encoder=..., sendOptions=..., qos=std::optional [no contained value]) at ./Source/WebKit/Platform/IPC/Connection.cpp:591 #4 0x00007f0d1910be3e in IPC::Connection::sendMessage (this=0x0, encoder=..., sendOptions=..., qos=std::optional [no contained value]) at ./Source/WebKit/Platform/IPC/Connection.cpp:586 #5 0x00007f0d190f99b1 in IPC::Connection::send<Messages::RiceBackendProxy::NotifyIncomingData> (this=0x0, message=..., destinationID=161, sendOptions=..., qos=std::optional [no contained value]) at ./Source/WebKit/Platform/IPC/Connection.h:863 #6 0x00007f0d190f9927 in WebKit::RiceBackend::notifyIncomingData(unsigned int, WebCore::RTCIceProtocol, WTF::String&&, WTF::String&&, WebCore::SharedMemoryHandle&&)::$_0::operator()() (this=0x7f0cf8748448) at ./Source/WebKit/NetworkProcess/webrtc/rice/RiceBackend.cpp:165 #7 0x00007f0d190f9889 in WTF::Detail::CallableWrapper<WebKit::RiceBackend::notifyIncomingData(unsigned int, WebCore::RTCIceProtocol, WTF::String&&, WTF::String&&, WebCore::SharedMemoryHandle&&)::$_0, void>::call (this=0x7f0cf8748440) at ./WebKitBuild/GTK/Debug/WTF/Headers/wtf/Function.h:59 #8 0x00007f0d0ae8d4aa in WTF::Function<void()>::operator() (this=0x7f0cf8738830) at ./WebKitBuild/GTK/Debug/WTF/Headers/wtf/Function.h:103 #9 0x00007f0d0cabbfad in WTF::callOnMainAndWait<(WTF::MainStyle)1>(WTF::Function<void ()>&&)::{lambda()#1}::operator()() const (this=0x7f0cf8738828) at ./Source/WTF/wtf/MainThread.cpp:124 #10 0x00007f0d0cabbf89 in WTF::Detail::CallableWrapper<WTF::callOnMainAndWait<(WTF::MainStyle)1>(WTF::Function<void ()>&&)::{lambda()#1}, void>::call() (this=0x7f0cf8738820) at ./Source/WTF/wtf/Function.h:59 #11 0x00007f0d0ae8d4aa in WTF::Function<void()>::operator() (this=0x7ffc39b14020) at ./WebKitBuild/GTK/Debug/WTF/Headers/wtf/Function.h:103 #12 0x00007f0d0caefce9 in WTF::RunLoop::performWork (this=0x7f0cf801c110) at ./Source/WTF/wtf/RunLoop.cpp:144 #13 0x00007f0d0ccef0b9 in WTF::RunLoop::RunLoop()::$_0::operator()(void*) const (this=0x7ffc39b140d7, userData=0x7f0cf801c110) at ./Source/WTF/wtf/glib/RunLoopGLib.cpp:80 #14 0x00007f0d0ccef099 in WTF::RunLoop::RunLoop()::$_0::__invoke(void*) (userData=0x7f0cf801c110) at ./Source/WTF/wtf/glib/RunLoopGLib.cpp:79 #15 0x00007f0d0cceefb2 in WTF::RunLoop::$_1::operator() (this=0x7ffc39b14147, source=0x36ab60e0, callback=0x7f0d0ccef080 <WTF::RunLoop::RunLoop()::$_0::__invoke(void*)>, userData=0x7f0cf801c110) at ./Source/WTF/wtf/glib/RunLoopGLib.cpp:57 #16 0x00007f0d0ccecd19 in WTF::RunLoop::$_1::__invoke (source=0x36ab60e0, callback=0x7f0d0ccef080 <WTF::RunLoop::RunLoop()::$_0::__invoke(void*)>, userData=0x7f0cf801c110) at ./Source/WTF/wtf/glib/RunLoopGLib.cpp:49 #17 0x00007f0d0d5ac2a3 in g_main_dispatch (context=0x36ab5fe0) at ../glib/gmain.c:3565 #18 g_main_context_dispatch_unlocked (context=context@entry=0x36ab5fe0) at ../glib/gmain.c:4425 #19 0x00007f0d0d5ac535 in g_main_context_dispatch (context=0x36ab5fe0) at ../glib/gmain.c:4413 #20 0x00007f0d0cced7b0 in WTF::RunLoop::runGLibMainLoopIteration (this=0x7f0cf801c110, mayBlock=WTF::RunLoop::MayBlock::Yes) at ./Source/WTF/wtf/glib/RunLoopGLib.cpp:118 #21 0x00007f0d0ccedba9 in WTF::RunLoop::runGLibMainLoop (this=0x7f0cf801c110) at ./Source/WTF/wtf/glib/RunLoopGLib.cpp:127 #22 0x00007f0d0ccedc3c in WTF::RunLoop::run () at ./Source/WTF/wtf/glib/RunLoopGLib.cpp:140 #23 0x00007f0d18f9046a in WebKit::AuxiliaryProcessMainBase<WebKit::NetworkProcess, false>::run (this=0x7ffc39b14370, argc=3, argv=0x7ffc39b14548) at ./Source/WebKit/Shared/AuxiliaryProcessMain.h:77 #24 0x00007f0d18f785f0 in WebKit::AuxiliaryProcessMain<WebKit::NetworkProcessMainSoup> (argc=3, argv=0x7ffc39b14548) at ./Source/WebKit/Shared/AuxiliaryProcessMain.h:103 #25 0x00007f0d18f785ab in WebKit::NetworkProcessMain (argc=3, argv=0x7ffc39b14548) at ./Source/WebKit/NetworkProcess/soup/NetworkProcessMainSoup.cpp:66 #26 0x00000000002018f2 in main (argc=3, argv=0x7ffc39b14548) at ./Source/WebKit/NetworkProcess/EntryPoint/unix/NetworkProcessMain.cpp:31
Philippe Normand
Comment 2 2025-12-11 09:10:43 PST
EWS
Comment 3 2025-12-12 00:59:10 PST
Committed 304347@main (2b6eda30248f): <https://commits.webkit.org/304347@main> Reviewed commits have been landed. Closing PR #55249 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2025-12-12 01:00:17 PST
Note You need to log in before you can comment on or make changes to this bug.