[GStreamer][WebRTC] webrtc/connection-state.html is flaky crash https://bugs.webkit.org/show_bug.cgi?id=304000

Reviewed by Xabier Rodriguez-Calvar.

Ensure the WebRTC ICE backend running in the NetworkProcess has a valid IPC connection before
sending an IncomingData notification to the WebProcess.

* Source/WebKit/NetworkProcess/webrtc/rice/RiceBackend.cpp:
(WebKit::RiceBackend::notifyIncomingData):

Canonical link: https://commits.webkit.org/304347@main